--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -642,7 +642,7 @@ bind F3 selectw -t:12
 1. Укажите, соответствуют ли следующие операторы/функции GNU Screen, tmux или обоим:
 
 | Функция/Оператор                                          | GNU Screen | tmux       |
-|:----------------------------------------------------------|------------|------------|
+|:----------------------------------------------------------|:----------:|:----------:|
 | Префикс команды по умолчанию <kbd>Ctrl</kbd>+<kbd>a</kbd> |     X      |            |
 | Модель клиент-сервер                                      |            |      X     |
 | Панели это псевдотерминалы                                |            |      X     |        
@@ -651,26 +651,25 @@ bind F3 selectw -t:12
 | Сессии могут быть отключены                               |     X      |      X     |         
 
 2. Установите GNU Screen на свой компьютер (имя пакета: `screen`) и выполните следующие задачи: 
-* Запустить программу. Какую команду вы используете? 
+* Запустить программу. Какую команду вы используете?  
 `screen`
-* Запустите `top`: 
+* Запустите `top`:  
 `top`
-* Используя префикс команд `screen`, откройте новое окно; затем откройте `/etc/screenrc` с помощью `vi`: 
+* Используя префикс команд `screen`, откройте новое окно; затем откройте `/etc/screenrc` с помощью `vi`:  
 <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>c</kbd>
 `vi /etc/screenrc`
-* Перечислите окна внизу экрана: 
+* Перечислите окна внизу экрана:  
 <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>w</kbd>
 * Измените имя текущего окна на `vi`: 
 <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>A</kbd>. Затем мы должны набрать `vi` и нажать <kbd>Enter</kbd>.
-* Измените название оставшегося окна на `top`. Для этого сначала отобразите список всех окон, чтобы вы могли перемещаться вверх и вниз и выбирать нужное: 
-	<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>"</kbd>
-	<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>A</kbd>. Затем мы должны набрать `topi` и нажать <kbd>Enter</kbd>.
+* Измените название оставшегося окна на `top`. Для этого сначала отобразите список всех окон, чтобы вы могли перемещаться вверх и вниз и выбирать нужное:  
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>"</kbd>  
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>A</kbd>. Затем мы должны набрать `topi` и нажать <kbd>Enter</kbd>.
 * Убедитесь, что имена изменились, снова отобразив имена окон в нижней части экрана: 
-```
-```
-* Теперь отключитесь от сессии и при помощи `screen` создайте новую с именем `ssh`: 
-```
-```
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>w</kbd>
+* Теперь отключитесь от сессии и при помощи `screen` создайте новую с именем `ssh`:  
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>d</kbd>  
+`screen -S "ssh"`
 * Отключитесь также от `ssh` и отобразите на экране список сессий: 
 ```
 ```
